--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ dependencyResolutionManagement {
 rootProject.name = "AndroidStudy"
 include ':ch6_view'
 include ':ch7_layout'
+include ':ch8_event'
